--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ edition = "2018"
 description = "Update your dns on several providers"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+async-trait = "0.1"
 eyre = "0.6.5"
+http = "0.2"
 public-ip = "0.2"
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+url = "2.2"
