--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 url = "2.2"
+chrono = { version = "0.4", features = ["serde"] }
+serde_with = "1.9"
