--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,13 @@ authors = [
     "Kevin Lopez <lokeon@muchobien.dev>",
 ]
 edition = "2018"
-description = "Update your dns on several providers"
+description = "Update your dynamic ip on several dns providers"
 
 [dependencies]
 async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
 eyre = "0.6.5"
 http = "0.2"
-lazy_static = "1.4"
 public-ip = "0.2"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
