--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,13 @@ description = "Update your dynamic ip on several dns providers"
 
 [dependencies]
 async-trait = "0.1"
-chrono = { version = "0.4", features = ["serde"] }
+cloudflare = { git = "https://github.com/muchobien/cloudflare-rs" }
+config = { version = "0.11", default-features = false }
 eyre = "0.6.5"
-http = "0.2"
 public-ip = "0.2"
-reqwest = { version = "0.11", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_with = "1.9"
+serde = "1.0"
+serde_derive = "1.0"
 structopt = "0.3"
 tokio = { version = "1", features = ["full"] }
-url = "2.2"
+validator = { version = "0.13", features = ["derive"] }
+strum = { version = "0.20", features = ["derive"] }
